--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 
-<title> Ideas&nbsp;&#183;&nbsp;Rohit Muley </title>
+<title> Quant&nbsp;&#183;&nbsp;Rohit Muley </title>
   
  <link href="./style.css" type="text/css" rel="stylesheet">
  <script type="text/javascript" src="script.js"></script>
