--- a/index.html
+++ b/index.html
@@ -53,10 +53,16 @@
  <div id="left">&nbsp;</div>
 <div id="content">
   
-<p> Here, &nbsp;I state and expand any ideas I came across while reading. &nbsp;This section deals 
-  with quite abstract stuff, which may not be to everyone's taste. if you feel so, feel free to check out the 
-  section.
- </p>
+<p> What I am doing right now, say on a timeline of 3-6 months.<br>
+</p>
+	
+<p><b>Updated on 5<sup>th</sup> April 2022</b> 
+	</p>
+	
+<p> There was a time to sow, there will be a time to reap.<br>
+	Right now, it's time to build.
+	
+	</p>
 </div>
 	 
 </header> 
