--- a/index.html
+++ b/index.html
@@ -63,6 +63,25 @@
 	Right now, it's time to build.
 	
 	</p>
+	
+	
+<p><h3>Reading:</h3><br>
+	My reading hit a slump for the last six months or so, for I was helping renovate my parents' house. Now that's mostly done,
+	so time to get back on the groove.
+	Have been meaning to explore David Graeber's body of work, so that's the primary reading for the next three months. I generally read several books at once,
+	with some novels for intellectual relief.<br>
+	Aiming to read ~ 30 hours a week at a decent pace. Roughly 4 hours a day, but daily targets never work for me.
+	<br><br><br>
+	
+	<h3>Writing:</h3><br>
+	Compiling a few essays I have been passively working on since a long time. Trying to streamline my very divergent writing process and publish regularly.
+	No time targets, more or less an anchoring work currently.
+	</p>
+	 
+	 <h3>French:</h3><br>
+	 Deep Diving into learning French. I follow an unorthodox method, trying to formalise it a bit through deadlines and 
+         <a href="totalexposure.html">Total Exposure</a>
+	 Focussing most on reading, which is most relevant to me at the moment.
 </div>
 	 
 </header> 
