--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
 	
 <p><h4>Reading:</h4>
 	<p>My reading hit a slump for the last six months or so, for I was helping renovate my parents' house. Now that's mostly done,
-	so time to get back on the groove.
+	so time to get back on the groove.<br>
 	Have been meaning to explore David Graeber's body of work, so that's the primary reading for the next three months. I generally read several books at once,
-	with some novels for intellectual relief.<br>
+	so would get ahead on the <a href="https://muleyrohit.github.io/Bookshelf/2022.html"> with some novels for intellectual relief.<br>
 	Aiming to read ~ 30 hours a week at a decent pace. Roughly 4 hours a day, but daily targets never work for me.
 	</p><br><br>
 	
@@ -80,7 +80,7 @@
 	 
 	 <h4>French:</h4>
 	 <p>Deep Diving into learning French. I follow an unorthodox method, trying to formalise it a bit through deadlines and 
-         <a href="totalexposure.html">Total Exposure</a>
+         <a href="totalexposure.html">Total Exposure</a><br>
 	 Focussing most on reading, which is most relevant to me at the moment.
 	</p><br><br>
 </div>
