--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 	 
 	 <h4>French:</h4>
 	 <p>Deep Diving into learning French. I follow an unorthodox method, trying to formalise it a bit through deadlines and 
-         <a href="totalexposure.html">Total Exposure</a><br>
+         <a href="totalexposure.html">Total Exposure.</a><br>
 	 Focussing most on reading, which is most relevant to me at the moment.
 	</p><br><br>
 </div>
