--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	<p>My reading hit a slump for the last six months or so, for I was helping renovate my parents' house. Now that's mostly done,
 	so time to get back on the groove.<br>
 	Have been meaning to explore David Graeber's body of work, so that's the primary reading for the next three months. I generally read several books at once,
-	so would get ahead on the <a href="https://muleyrohit.github.io/Bookshelf/2022.html"> with some novels for intellectual relief.<br>
+	so would get ahead on the <a href="https://muleyrohit.github.io/Bookshelf/2022.html">2022</a> list with some novels for intellectual relief.<br>
 	Aiming to read ~ 30 hours a week at a decent pace. Roughly 4 hours a day, but daily targets never work for me.
 	</p><br><br>
 	
