--- a/index.html
+++ b/index.html
@@ -77,6 +77,18 @@
 	<p>Compiling a few essays I have been passively working on since a long time. Trying to streamline my very divergent writing process and publish regularly.
 	No time targets, more or less an anchoring work currently.
 	</p><br><br>
+	
+	
+	
+	
+	 <h4>JavaScript:</h4>
+	 <p>Focussing on reinforcing JavaScript. I know enough to get by, but this time I aim to get good at it from a professional perspective.
+	Following the process prescribed by <a href="https://https://sive.rs/learn-js">Derek Sivers</a> along with a couple of ideas of my own.
+	This will also address any of my current or future full-stack requirements towards this website.<br>
+
+	
+        
+	</p><br><br>
 	 
 	 <h4>French:</h4>
 	 <p>Deep Diving into learning French. I follow an unorthodox method, trying to formalise it a bit through deadlines and 
