--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 	
 	 <h4>JavaScript:</h4>
 	 <p>Focussing on reinforcing JavaScript. I know enough to get by, but this time I aim to get good at it from a professional perspective.
-	Following the process prescribed by <a href="https://https://sive.rs/learn-js">Derek Sivers</a> along with a couple of ideas of my own.<br>
+	Following the process prescribed by <a href="https://sive.rs/learn-js">Derek Sivers</a> along with a couple of ideas of my own.<br>
 	This will also address any of my current or future full-stack requirements towards this website.
 
 	
