--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <p> What I am doing right now, say on a timeline of 3-6 months.<br>
 </p>
 	
-<p><b>Updated on 15<sup>th</sup> April 2022</b> 
+<p><b>Updated on 31<sup>st</sup> August 2022</b> 
 	</p>
 	
 <p> There was a time to sow, there will be a time to reap.<br>
@@ -66,8 +66,7 @@
 	
 	
 <p><h4>Reading:</h4>
-	<p>My reading hit a slump for the last six months or so, for I was helping renovate my parents' house. Now that's mostly done,
-	so time to get back on the groove.<br>
+	<p>My reading has hit a slump for the last six months, so time to get back on the groove.<br>
 	Have been meaning to explore David Graeber's body of work, so that's the primary reading for the next three months. I generally read several books at once,
 	so would get ahead on the <a href="https://muleyrohit.github.io/Bookshelf/2022.html">2022</a> list with some novels for intellectual relief.<br>
 	Aiming to read ~ 30 hours a week at a decent pace. Roughly 4 hours a day, but daily targets never work for me.
